Fix header map overlap + add full screen button.

--- a/static/sass/layout/_main.scss
+++ b/static/sass/layout/_main.scss
@@ -17,32 +17,20 @@ html, body {
   height: 100%;
 }
 
-#header, #map, #footer {
-  position: absolute;
-}
-
 #header {
   height: 3.5em;
   width: 100%;
 }
 
-#map {
-  top: 3.5em;
-  bottom: 0px;
-  width: 100%;
+.main-container {
+    position: fixed;
+    top: 3.5em;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
-.fab {
-  background: darken(_palette(accent2, bg), 12);
-  color: _palette(accent2, fg);
-  width:30px;
-  height:30px;
-  border-radius:100%;
-  border:none;
-  outline:none;
-  font-size:18px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  transition:.3s;
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  text-align: center;
+#map {
+  height: 100%;
+  width: 100%;
 }
